<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StepOverviewFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_step_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:listitem="@layout/step_overview_item">

    </androidx.recyclerview.widget.RecyclerView>

</FrameLayout>