...
    android:id="@+id/step_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StepDetailFragment">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/playerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
